--- a/styles.css
+++ b/styles.css
@@ -287,7 +287,7 @@ a:hover{
   .arrow{
     position: absolute;
     right: -5rem;
-    bottom: 2.5rem;;
+    bottom: 2.5rem;
   }
   .details-container {
     padding: 1.5rem;
