--- a/styles.css
+++ b/styles.css
@@ -309,3 +309,14 @@ a:hover{
     width: 400px;
     margin: auto 0;
   }
+
+  /*FOOTER*/
+  footer {
+    height: 26vh;
+    margin: 0 1rem;
+    margin-top: 40rem;
+  }
+  
+  footer p {
+    text-align: center;
+  }
